# nickel-auth

./: Cargo.toml  test.sh
examples/: example.rs  user.rs
src/: authorize.rs  current_user.rs  lib.rs
